# Mister-vpn

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  server_start.py
adaptgroup/: README.md  mister_vpn_subscription_page.html
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_user_balance.py  0003_plan_visibility.py  0004_trial_and_reminders.py  0005_promo_codes.py  0006_plan_period_groups.py  0007_plan_manual_names.py  0008_plan_button_style.py
app/: main_api.py  main_bot.py
app/api/routes/: __init__.py  subscription_page.py  webhooks.py
app/bot/: __init__.py  deps.py  premium_emoji.py  screens.py  texts.py
app/bot/filters/: __init__.py  admin.py
app/bot/handlers/: __init__.py  _errors.py  buy.py  (+10 more)
app/clients/: __init__.py  adaptgroup.py
app/core/: config.py  enums.py  logging.py  plan_periods.py  security.py
app/db/: database.py
app/repositories/: __init__.py  base.py  orders.py  plans.py  promos.py  settings.py  subscriptions.py  users.py  webhook_events.py
app/services/: device_keys.py  device_monitor.py  notifications.py  orders.py  plan_periods.py  plans.py  reminders.py  subscriptions.py  webhooks.py
app/utils/: formatting.py  idempotency.py
desktop_client/: README.md
desktop_client/MisterVpnClient/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tests/: conftest.py  test_adaptgroup_client.py  test_admin_rights.py  test_formatting.py  test_orders.py  test_rollypay_provider.py  test_webhook_signature.py  test_webhooks.py  test_yookassa_provider.py
(+29 files in other folders)
